--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.eclipse.ajetty</groupId>
+    <groupId>com.github.demidenko05</groupId>
     <artifactId>a-jetty-all</artifactId>
     <version>1.0.1-SNAPSHOT</version>
   </parent>
@@ -38,22 +38,22 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.atomcat</groupId>
+      <groupId>com.github.demidenko05</groupId>
       <artifactId>a-apache-jsp</artifactId>
       <version>1.0.3-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.atomcat</groupId>
+      <groupId>com.github.demidenko05</groupId>
       <artifactId>taglibs-standard-spec</artifactId>
       <version>1.0.3-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.atomcat</groupId>
+      <groupId>com.github.demidenko05</groupId>
       <artifactId>taglibs-standard-impl</artifactId>
       <version>1.0.3-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>openjdk7.android</groupId>
+      <groupId>com.github.demidenko05</groupId>
       <artifactId>a-javabeans</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
