--- a/a-jetty/pom.xml
+++ b/a-jetty/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.eclipse.ajetty</groupId>
+    <groupId>com.github.demidenko05</groupId>
     <artifactId>a-jetty-all</artifactId>
     <version>1.0.1-SNAPSHOT</version>
   </parent>
@@ -44,7 +44,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.ajetty</groupId>
+      <groupId>com.github.demidenko05</groupId>
       <artifactId>a-jetty-base</artifactId>
       <version>${project.version}</version>
     </dependency>
