--- a/webapp-test/pom.xml
+++ b/webapp-test/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.eclipse.ajetty</groupId>
+    <groupId>com.github.demidenko05</groupId>
     <artifactId>a-jetty-all</artifactId>
     <version>1.0.1-SNAPSHOT</version>
   </parent>
@@ -34,7 +34,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.atomcat</groupId>
+      <groupId>com.github.demidenko05</groupId>
       <artifactId>a-apache-jsp</artifactId>
       <version>1.0.3-SNAPSHOT</version>
       <scope>provided</scope>
