--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -9,10 +9,16 @@
   </parent>
   <artifactId>a-jetty-base</artifactId>
   
-  <name>Jetty Base for Android A-Jetty.</name>
-  <description>Jetty Base for Android A-Jetty. It is ordinal runnable JAR file containing Jetty
-   configured as minimum server with WebAppDeployer that deploy ordinal non-JSP WAR (JSP/JSTL must be precompeled into servlets).</description>
-  
+  <name>A-Jetty Base.</name>
+  <description>A-Jetty Base can run on Android Java as well as on standard Java 7+ and it can run precompiled JSP/JSTL.</description>
+  <url>http://www.beigesoft.org</url>
+
+  <contributors>
+    <contributor>
+      <name>Yury Demidenko</name>
+    </contributor>
+  </contributors>
+
   <licenses>
     <license>
       <name>The Eclipse Public License, Version 1.0</name>
