--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.demidenko05</groupId>
   <artifactId>a-jetty-all</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   
   <name>A-Jetty is Jetty 9.2 adapted for Android.</name>  
@@ -329,7 +329,7 @@
     <url>https://github.com/demidenko05/a-jetty-all.git</url>
     <connection>scm:git:git@github.com:demidenko05/a-jetty-all.git</connection>
     <developerConnection>scm:git:git@github.com:demidenko05/a-jetty-all.git</developerConnection>
-    <tag>a-jetty-all-1.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <modules>
