--- a/webapp-test/pom.xml
+++ b/webapp-test/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.github.demidenko05</groupId>
     <artifactId>a-jetty-all</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
   <artifactId>webapp-test</artifactId>
   <packaging>war</packaging>
