--- a/webapp-test/src/main/webapp/WEB-INF/web.xml
+++ b/webapp-test/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Beigesoft ™
-  Licensed under the Apache License, Version 2.0
+<!--
+ Copyright (c) 2015-2017 Beigesoft ™
  
-  You may obtain a copy of the License at
+ Licensed under the GNU General Public License (GPL), Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
  
-  http://www.apache.org/licenses/LICENSE-2.0
+  http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html
  -->
+
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
   http://java.sun.com/xml/ns/j2ee/web-app_2_5.xsd"
   version="2.5">
-  <display-name>Beige WEB</display-name>
+  <display-name>Beige A-Jetty Web-App-test</display-name>
   <jsp-property-group>
     <trim-directive-whitespaces>true</trim-directive-whitespaces>
   </jsp-property-group>
@@ -25,6 +28,39 @@
     <servlet-name>webtest</servlet-name>
     <url-pattern>/webtest/*</url-pattern>
   </servlet-mapping>
+
+<!--
+Automatically created by Apache Tomcat JspC.
+Place this fragment in the web.xml before all icon, display-name,
+description, distributable, and context-param elements.
+-->
+
+    <servlet>
+        <servlet-name>org.apache.jsp.hello_jsp</servlet-name>
+        <servlet-class>org.apache.jsp.hello_jsp</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>org.apache.jsp.test_jsp</servlet-name>
+        <servlet-class>org.apache.jsp.test_jsp</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>org.apache.jsp.hello_jsp</servlet-name>
+        <url-pattern>/hello.jsp</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>org.apache.jsp.test_jsp</servlet-name>
+        <url-pattern>/test.jsp</url-pattern>
+    </servlet-mapping>
+
+<!--
+All session-config, mime-mapping, welcome-file-list, error-page, taglib,
+resource-ref, security-constraint, login-config, security-role,
+env-entry, and ejb-ref elements should follow this fragment.
+-->
+
   <session-config>
     <session-timeout>30</session-timeout>
   </session-config>
