--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -40,28 +40,34 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.7</java.version>
+    <aapache.version>1.0.4-SNAPSHOT</aapache.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>com.github.demidenko05</groupId>
       <artifactId>a-apache-jsp</artifactId>
-      <version>1.0.3</version>
+      <version>${aapache.version}</version>
     </dependency>
     <dependency>
       <groupId>com.github.demidenko05</groupId>
       <artifactId>taglibs-standard-spec</artifactId>
-      <version>1.0.3</version>
+      <version>${aapache.version}</version>
     </dependency>
     <dependency>
       <groupId>com.github.demidenko05</groupId>
       <artifactId>taglibs-standard-impl</artifactId>
-      <version>1.0.3</version>
+      <version>${aapache.version}</version>
     </dependency>
     <dependency>
       <groupId>com.github.demidenko05</groupId>
-      <artifactId>a-javabeans</artifactId>
-      <version>1.0.4</version>
+      <artifactId>a-javabeans8</artifactId>
+      <version>1.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.beigesoft</groupId>
+      <artifactId>beige-logging-base</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
