--- a/a-jetty/src/main/AndroidManifest.xml
+++ b/a-jetty/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Beigesoft ™
-  Licensed under the Apache License, Version 2.0
+<!--
+ Copyright (c) 2015-2017 Beigesoft ™
  
-  You may obtain a copy of the License at
+ Licensed under the GNU General Public License (GPL), Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
  
-  http://www.apache.org/licenses/LICENSE-2.0
+  http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html
  -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.beigesoft.android.ajetty"
