--- a/webapp-test/pom.xml
+++ b/webapp-test/pom.xml
@@ -44,8 +44,8 @@
   <dependencies>
     <dependency>
       <groupId>com.github.demidenko05</groupId>
-      <artifactId>a-apache-jsp</artifactId>
-      <version>1.0.3</version>
+      <artifactId>a-jetty-base</artifactId>
+      <version>1.0.2-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -72,7 +72,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.6</version>
+        <version>3.1.0</version>
       </plugin>
     </plugins>
   </build>
