fixed licence year to 2016

--- a/a-jetty/src/main/assets/A-Jetty/webapps/webapp-test/WEB-INF/web.xml
+++ b/a-jetty/src/main/assets/A-Jetty/webapps/webapp-test/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- Copyright (c) 2015-2017 Beigesoft ™
+ Copyright (c) 2016 Beigesoft ™
  
  Licensed under the GNU General Public License (GPL), Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
