--- a/a-jetty/pom.xml
+++ b/a-jetty/pom.xml
@@ -12,7 +12,7 @@
   
   <name>A-Jetty for Android.</name>
   <description>A-Jetty for Android. It is Jetty 9.2 adapted for Android
-   configured as minimum server with WebAppDeployer that can deploy ordinal WAR (JSP/JSTL must be precompeled into servlets)</description>
+   configured as minimum server with WebAppDeployer that can deploy ordinal WAR (JSP/JSTL must be precompeled into servlets by A-Tomcat)</description>
   <url>http://www.beigesoft.org</url>
 
   <inceptionYear>2016</inceptionYear>
@@ -49,7 +49,7 @@
 
   <profiles>
     <profile>
-      <id>sign</id>
+      <id>signApk</id>
       <build>
         <plugins>
           <plugin>
@@ -69,7 +69,6 @@
                   <includes>
                     <include>target/*.apk</include>
                   </includes>
-                  <!--<keystore>path/to/keystore</keystore> default-->
                   <storepass>${signpass}</storepass>
                   <keypass>${signpass}</keypass>
                   <alias>bsf-key</alias>
@@ -84,7 +83,68 @@
           <plugin>
             <groupId>com.simpligility.maven.plugins</groupId>
             <artifactId>android-maven-plugin</artifactId>
-            <version>4.4.2</version>
+            <version>4.5.0</version>
+            <inherited>true</inherited>
+            <configuration>
+              <sign>
+                <debug>false</debug>
+              </sign>
+              <zipalign>
+                <verbose>true</verbose>
+                <inputApk>${project.build.directory}/${project.artifactId}.apk</inputApk>
+                <outputApk>${project.build.directory}/${project.artifactId}-sa.apk</outputApk>
+                <skip>false</skip>  
+              </zipalign>
+            </configuration>
+            <executions>
+              <execution>
+                <id>alignApk</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>zipalign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jarsigner-plugin</artifactId>
+            <version>1.4</version>
+            <executions>
+              <execution>
+                <id>signing</id>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+                <phase>package</phase>
+                <inherited>true</inherited>
+                <configuration>
+                  <archiveDirectory />
+                  <includes>
+                    <include>target/*.apk</include>
+                  </includes>
+                  <storepass>${signpass}</storepass>
+                  <keypass>${signpass}</keypass>
+                  <alias>bsf-key</alias>
+                  <arguments>
+                    <argument>-sigalg</argument><argument>MD5withRSA</argument>
+                    <argument>-digestalg</argument><argument>SHA1</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>com.simpligility.maven.plugins</groupId>
+            <artifactId>android-maven-plugin</artifactId>
+            <version>4.5.0</version>
             <inherited>true</inherited>
             <configuration>
                 <sign>
@@ -117,10 +177,10 @@
       <plugin>
         <groupId>com.simpligility.maven.plugins</groupId>
         <artifactId>android-maven-plugin</artifactId>
-        <version>4.4.2</version>
+        <version>4.5.0</version>
         <configuration>
           <run>
-            <debug>true</debug>
+            <debug>false</debug>
           </run>
           <sdk>
             <platform>24</platform>
