--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -41,7 +41,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.7</java.version>
-    <aapache.version>1.0.4-SNAPSHOT</aapache.version>
+    <aapache.version>1.0.4</aapache.version>
   </properties>
 
   <dependencies>
