--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.github.demidenko05</groupId>
     <artifactId>a-jetty-all</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
   </parent>
   <artifactId>a-jetty-base</artifactId>
   
