--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ release.properties
 *.releaseBackup
 */findbug-exclude.xml
 *.log
+a-jetty-base/ajettykeystore.1
+a-jetty-base/bobs-pizza-nfs-r.sqlite
+a-jetty-base/bobs-pizza-nfs.encr
