--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,9 @@
                 <!--Rule:AvoidUsingHardCodedIP is wrong-->
                 <exclude>org/beigesoft/ajetty/BootStrap.java</exclude>
                 <exclude>org/beigesoft/ajetty/BootStrapEmbedded.java</exclude>
+                <exclude>org/beigesoft/ajetty/BootStrapEmbeddedHttps.java</exclude>
                 <exclude>org/beigesoft/ajetty/BootStrapEmbeddedSwing.java</exclude>
+                <exclude>org/beigesoft/ajetty/BootStrapEmbeddedHttpsSwing.java</exclude>
               </excludes>
             </configuration>
             <executions>
