starter logger added, fixed apk sign/align

--- a/a-jetty-swing/pom.xml
+++ b/a-jetty-swing/pom.xml
@@ -11,7 +11,7 @@
   
   <name>A-Jetty SWING start/stop interface.</name>
   <description>It's SWING interface to starts/stops WEB-app on embedded A-Jetty.</description>
-  <url>http://www.beigesoft.org</url>
+  <url>https://sites.google.com/site/beigesoftware</url>
   <inceptionYear>2017</inceptionYear>
   
   <developers>
