--- a/a-jetty/pom.xml
+++ b/a-jetty/pom.xml
@@ -13,7 +13,7 @@
   <name>A-Jetty for Android.</name>
   <description>A-Jetty for Android. It is Jetty 9.2 adapted for Android
    configured as minimum server with WebAppDeployer that can deploy ordinal WAR (JSP/JSTL must be precompeled into servlets by A-Tomcat)</description>
-  <url>http://www.beigesoft.org</url>
+  <url>https://sites.google.com/site/beigesoftware</url>
 
   <inceptionYear>2016</inceptionYear>
   
@@ -62,20 +62,16 @@
                 <goals>
                   <goal>sign</goal>
                 </goals>
-                <phase>package</phase>
+                <phase>verify</phase>
                 <inherited>true</inherited>
                 <configuration>
                   <archiveDirectory />
                   <includes>
-                    <include>target/*.apk</include>
+                    <include>target${file.separator}*.apk</include>
                   </includes>
                   <storepass>${signpass}</storepass>
                   <keypass>${signpass}</keypass>
-                  <alias>bsf-key</alias>
-                  <arguments>
-                    <argument>-sigalg</argument><argument>MD5withRSA</argument>
-                    <argument>-digestalg</argument><argument>SHA1</argument>
-                  </arguments>
+                  <alias>bs-key</alias>
                 </configuration>
               </execution>
             </executions>
@@ -91,18 +87,37 @@
               </sign>
               <zipalign>
                 <verbose>true</verbose>
-                <inputApk>${project.build.directory}/${project.artifactId}.apk</inputApk>
-                <outputApk>${project.build.directory}/${project.artifactId}-sa.apk</outputApk>
+                <inputApk>${project.build.directory}${file.separator}${project.artifactId}.apk</inputApk>
+                <outputApk>${project.build.directory}${file.separator}${project.artifactId}-sa.apk</outputApk>
                 <skip>false</skip>  
               </zipalign>
             </configuration>
             <executions>
               <execution>
                 <id>alignApk</id>
-                <phase>package</phase>
+                <phase>verify</phase>
                 <goals>
                   <goal>zipalign</goal>
                 </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>  
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.7</version>
+            <executions>
+              <execution>
+                <id>remove-unaligned-apk</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <delete file="${project.build.directory}${file.separator}${project.artifactId}.apk" />
+                  </target>
+                </configuration>
               </execution>
             </executions>
           </plugin>
@@ -114,42 +129,14 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jarsigner-plugin</artifactId>
-            <version>1.4</version>
-            <executions>
-              <execution>
-                <id>signing</id>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-                <phase>package</phase>
-                <inherited>true</inherited>
-                <configuration>
-                  <archiveDirectory />
-                  <includes>
-                    <include>target/*.apk</include>
-                  </includes>
-                  <storepass>${signpass}</storepass>
-                  <keypass>${signpass}</keypass>
-                  <alias>bsf-key</alias>
-                  <arguments>
-                    <argument>-sigalg</argument><argument>MD5withRSA</argument>
-                    <argument>-digestalg</argument><argument>SHA1</argument>
-                  </arguments>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
             <groupId>com.simpligility.maven.plugins</groupId>
             <artifactId>android-maven-plugin</artifactId>
             <version>4.5.0</version>
             <inherited>true</inherited>
             <configuration>
-                <sign>
-                    <debug>false</debug>
-                </sign>
+              <sign>
+                <debug>false</debug>
+              </sign>
             </configuration>
           </plugin>
         </plugins>
