--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <name>A-Jetty is Jetty 9.2 adapted for Android.</name>  
   <description>A-Jetty is Jetty 9.2 adapted for Android, it can run precompiled JSP/JSTL.</description>
-  <url>http://www.beigesoft.org</url>
+  <url>https://sites.google.com/site/beigesoftware</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -52,19 +52,46 @@
             </executions>
           </plugin>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.6</version>
+            <groupId>com.simpligility.maven.plugins</groupId>
+            <artifactId>android-maven-plugin</artifactId>
+            <version>4.5.0</version>
+            <inherited>true</inherited>
+            <configuration>
+              <sign>
+                <debug>false</debug>
+              </sign>
+              <zipalign>
+                <verbose>true</verbose>
+                <inputApk>${project.build.directory}${file.separator}${project.artifactId}.apk</inputApk>
+                <outputApk>${project.build.directory}${file.separator}${project.artifactId}-sa.apk</outputApk>
+                <skip>false</skip>  
+              </zipalign>
+            </configuration>
             <executions>
               <execution>
-                <id>sign-artifacts</id>
+                <id>alignApk</id>
                 <phase>verify</phase>
                 <goals>
-                  <goal>sign</goal>
+                  <goal>zipalign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>  
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.7</version>
+            <executions>
+              <execution>
+                <id>remove-unaligned-apk</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>run</goal>
                 </goals>
                 <configuration>
-                  <keyname>48E407CA</keyname>
-                  <passphraseServerId>48E407CA</passphraseServerId>
+                  <target>
+                    <delete file="${project.build.directory}${file.separator}${project.artifactId}.apk" />
+                  </target>
                 </configuration>
               </execution>
             </executions>
@@ -84,16 +111,30 @@
                 <configuration>
                   <archiveDirectory />
                   <includes>
-                    <include>target/*.apk</include>
-                    <include>target/*.jar</include>
+                    <include>target${file.separator}*.apk</include>
+                    <include>target${file.separator}*.jar</include>
                   </includes>
                   <storepass>${signpass}</storepass>
                   <keypass>${signpass}</keypass>
-                  <alias>bsf-key</alias>
-                  <arguments>
-                    <argument>-sigalg</argument><argument>MD5withRSA</argument>
-                    <argument>-digestalg</argument><argument>SHA1</argument>
-                  </arguments>
+                  <alias>bs-key</alias>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+                <configuration>
+                  <keyname>48E407CA</keyname>
+                  <passphraseServerId>48E407CA</passphraseServerId>
                 </configuration>
               </execution>
             </executions>
