added jar signing, fixed crossplatform file separator, fixed webcontext path for several jetty instances...

--- a/a-jetty/pom.xml
+++ b/a-jetty/pom.xml
@@ -71,7 +71,7 @@
                   </includes>
                   <storepass>${signpass}</storepass>
                   <keypass>${signpass}</keypass>
-                  <alias>bs-key</alias>
+                  <alias>${signalias}</alias>
                 </configuration>
               </execution>
             </executions>
