--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -41,7 +41,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.7</java.version>
-    <aapache.version>1.0.4</aapache.version>
+    <aapache.version>1.0.5-SNAPSHOT</aapache.version>
   </properties>
 
   <dependencies>
@@ -63,7 +63,7 @@
     <dependency>
       <groupId>com.github.demidenko05</groupId>
       <artifactId>a-javabeans8</artifactId>
-      <version>1.0.1</version>
+      <version>1.0.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.beigesoft</groupId>
