added command line starter

--- a/a-jetty-swing/pom.xml
+++ b/a-jetty-swing/pom.xml
@@ -68,7 +68,7 @@
           <runOnlyAtExecutionRoot>false</runOnlyAtExecutionRoot>
           <archive>
             <manifest>
-              <mainClass>org.beigesoft.ajetty.BootStrapEmbeddedSwing</mainClass>
+              <mainClass>org.beigesoft.ajetty.BootStrapEmbeddedMain</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
