--- a/a-jetty-swing/pom.xml
+++ b/a-jetty-swing/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.github.demidenko05</groupId>
     <artifactId>a-jetty-all</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
   </parent>
   <artifactId>a-jetty-swing</artifactId>
   
