--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -68,7 +68,7 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beige-logging-base</artifactId>
-      <version>1.0.2-SNAPSHOT</version>
+      <version>1.0.2</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
