--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -67,8 +67,8 @@
     </dependency>
     <dependency>
       <groupId>org.beigesoft</groupId>
-      <artifactId>beige-logging-base</artifactId>
-      <version>1.0.2</version>
+      <artifactId>beige-log-base</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -78,12 +78,12 @@
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
-      <version>1.59</version>
+      <version>1.61</version>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcpkix-jdk15on</artifactId>
-      <version>1.59</version>
+      <version>1.61</version>
     </dependency>
   </dependencies>
 
