--- a/a-jetty-base/pom.xml
+++ b/a-jetty-base/pom.xml
@@ -32,8 +32,8 @@
       <distribution>repo</distribution>
     </license>
     <license>
-      <name>GNU General Public License version 2</name>
-      <url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html</url>
+      <name>BSD 2-Clause License</name>
+      <url>https://sites.google.com/site/beigesoftware/bsd2csl</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -67,8 +67,8 @@
     </dependency>
     <dependency>
       <groupId>org.beigesoft</groupId>
-      <artifactId>beige-log-base</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>beige-logging-base</artifactId>
+      <version>1.0.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
