--- a/a-jetty-swing/pom.xml
+++ b/a-jetty-swing/pom.xml
@@ -58,7 +58,7 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beige-logging-slf4j</artifactId>
-      <version>1.0.3-SNAPSHOT</version>
+      <version>1.0.3</version>
     </dependency>
   </dependencies>
 
