--- a/a-jetty/pom.xml
+++ b/a-jetty/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.github.demidenko05</groupId>
     <artifactId>a-jetty-all</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.5</version>
   </parent>
   <artifactId>a-jetty</artifactId>
   <packaging>apk</packaging>
